--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Little Lemon Web site created using create-react-app"
     />
+    <meta name="og:title" content="Little Lemon Restaurant"/>
+    <meta name="og:description" content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
+    <meta name="og:image" content="https://little-lemon-restaurant-project.netlify.app/static/media/Logo%20Footer.2c859235d6c57bb54176.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
