--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--<script src="http://localhost:8097"></script>-->>
+    <!--<script src="http://localhost:8097"></script>-->
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/images/little_lemon.png" type="image/png"/>
+    <link rel="icon" href="/images/little_lemon.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="/images/little_lemon.png" sizes="32x32" type="image/png" />
+    <link rel="icon" href="/images/little_lemon.png" sizes="48x48" type="image/png" />
+    <link rel="icon" href="/images/little_lemon.png" sizes="192x192" type="image/png" />
+    <link rel="apple-touch-icon" href="/images/little_lemon.png" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta
